--- a/Projects/9ModifyingEvent.html
+++ b/Projects/9ModifyingEvent.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Passing Your Own Arguments with Events</title>
+    <title>Modifying an Event</title>
     <script src="../js/vue.min.js"></script>
 </head>
 
