--- a/Projects/15DynamicStyleWithCSS1.html
+++ b/Projects/15DynamicStyleWithCSS1.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dynamic Styling with CSS Basics</title>
+    <script src="../js/vue.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
+<div id="app">
+    <div class="demo"
+         @click="attachRed = !attachRed"
+         :class="{red: attachRed}">
+    </div>
+    <div class="demo"></div>
+    <div class="demo"></div>
+</div>
 
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            attachRed: false
+    }
+    })
+</script>
 </body>
 </html>
