--- a/Projects/15DynamicStyleWithCSS1.html
+++ b/Projects/15DynamicStyleWithCSS1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dynamic Styling with CSS Basics</title>
+    <title>Dynamic Styling with CSS Classes - Basics</title>
     <script src="../js/vue.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
