--- a/Projects/17DynamicStyleWithCSS3.html
+++ b/Projects/17DynamicStyleWithCSS3.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dynamic Styling with CSS Classes - Using Names</title>
+    <script src="../js/vue.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
+<div id="app">
+    <div class="demo"
+         @click="attachRed = !attachRed"
+         :class="divClasses">
+    </div>
+    <div class="demo"
+         :class="[color,{red: attachRed}]"></div>
+    <div class="demo"></div>
+    <input type="text" v-model="color">
+</div>
 
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            attachRed: false,
+            color: 'green'
+        },
+        computed: {
+            divClasses: function () {
+                return {
+                    red: this.attachRed,
+                    blue: !this.attachRed
+                }
+            }
+        }
+    });
+</script>
 </body>
 </html>
